Add form for title

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        <!-- <h1>Bienvenido a Notas</h1> -->
         <form>
           <div class="input">
-            <label for="3" class="text-sm overline">Titulo</label>
+            <label for="3" class="text-sm overline">Titulo <input type="text"></label>
             <div class="input__container">
               <textarea
                 type="text"
