--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
   <div class="section">
     <section class="lateral">
       <p>Soy lateral</p>
+      <a href="index.html">
+
+        notes
+      </a>
+      <a href="#">
+        trash
+      </a>
     </section>
 
     <section class="main py-1 ">
