--- a/index.html
+++ b/index.html
@@ -45,15 +45,24 @@
           </div>
           <div class="input__footer">
             <div class="icons">
-              <div class="colors colors-opened">
-
-              </div>
               <svg>
                 <use xlink:href="#palette" />
               </svg>
             </div>
             <!-- <a class="create-note" href="">Keep it!</a> -->
             <button>Keep it!</button>
+          </div>
+          <div class="colors colors-opened">
+            <div class="color border-gray color1"></div>
+            <div class="color color2"></div>
+            <div class="color color3"></div>
+            <div class="color color4"></div>
+            <div class="color color5"></div>
+            <div class="color color6"></div>
+            <div class="color color7"></div>
+            <div class="color color8"></div>
+            <div class="color color9"></div>
+            <div class="color color10"></div>
           </div>
         </div>
 
