Add links to trashpage

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </svg>
         Notes
       </a>
-      <a href="#" class="lateral__links">
+      <a href="trashpage.html" class="lateral__links">
         <svg>
           <use xlink:href="#trash" />
         </svg>
