Add createNote function and renderNotes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </svg>
             </div>
             <!-- <a class="create-note" href="">Keep it!</a> -->
-            <button>Keep it!</button>
+            <button class="btn_add">Keep it!</button>
           </div>
           <div class="colors colors-opened">
             <div class="color border-gray color1"></div>
@@ -71,28 +71,20 @@
       <div class="main__notes">
         <div class="container">
           <div class="container-notas">
-            <div class="nota">
-              <p class="text-sm overline">Title</p>
-              <!-- <div class="input__container">
-                  <p>Nota 1</p>
-                </div>
-                <div class="input__footer">
-                  <div class="icons">
-                    <svg><use xlink:href="#palette"/></svg>
-                  </div>
-                  <button>Eliminar</button>
-                </div> -->
-            </div>
-
+            <ul>
+            <li>
             <div class="nota">
               <p>Nota 2</p>
-              <button>Eliminar</button>
+              <button class="delete">Eliminar</button>
             </div>
-
+           </li>
+           <li>
             <div class="nota">
               <p>Nota 3</p>
-              <button>Eliminar</button>
+              <button class="delete">Eliminar</button>
             </div>
+          </li>
+            </ul>
           </div>
         </div>
       </div>
