Add eventlistener for function crearNota

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
       <!-- <h1>Bienvenido a Notas</h1> -->
       <form>
         <div class="input">
-          <input class="title-notes" id="title" type="text" placeholder="The title for my note"></label>
+        <label for="title"><input class="title-notes" id="title" type="text" placeholder="The title for my note"></label>
           <div class="input__container">
-            <textarea type="text" placeholder="Write a note" class="input__content" id="3" name="new-note"></textarea>
+        <label for="content">    <textarea type="text" placeholder="Write a note" class="input__content" id="content" name="new-note"></textarea></label>
           </div>
           <div class="input__footer">
             <div class="icons">
               <svg>
-                <use xlink:href="#palette" />
+                <use xlink:href="#palette" />         
               </svg>
             </div>
             <!-- <a class="create-note" href="">Keep it!</a> -->
@@ -74,13 +74,15 @@
             <ul>
             <li>
             <div class="nota">
-              <p>Nota 2</p>
+              <p>Nota 1</p>
+              <p>Ir al parque</p>
               <button class="delete">Eliminar</button>
             </div>
            </li>
            <li>
             <div class="nota">
-              <p>Nota 3</p>
+              <p>Nota 2</p>
+              <p>Entregar Guitarra</p>
               <button class="delete">Eliminar</button>
             </div>
           </li>
