--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
       <!-- <h1>Bienvenido a Notas</h1> -->
       <form>
         <div class="input">
-        <label for="title"><input class="title-notes" id="title" type="text" placeholder="The title for my note"></label>
+          <label for="title"><input class="title-notes" id="title" type="text"
+              placeholder="The title for my note"></label>
           <div class="input__container">
-        <label for="content">    <textarea type="text" placeholder="Write a note" class="input__content" id="content" name="new-note"></textarea></label>
+            <label for="content"> <textarea type="text" placeholder="Write a note" class="input__content" id="content"
+                name="new-note"></textarea></label>
           </div>
           <div class="input__footer">
             <div class="icons">
               <svg>
-                <use xlink:href="#palette" />         
+                <use xlink:href="#palette" />
               </svg>
             </div>
             <!-- <a class="create-note" href="">Keep it!</a> -->
@@ -69,23 +71,23 @@
 
       </form>
       <div class="main__notes">
-        <div class="container">
+        <div>
           <div class="container-notas">
-            <ul>
-            <li>
-            <div class="nota">
-              <p>Nota 1</p>
-              <p>Ir al parque</p>
-              <button class="delete">Eliminar</button>
-            </div>
-           </li>
-           <li>
-            <div class="nota">
-              <p>Nota 2</p>
-              <p>Entregar Guitarra</p>
-              <button class="delete">Eliminar</button>
-            </div>
-          </li>
+            <ul class="container">
+              <li>
+                <div class="nota">
+                  <p>Nota 1</p>
+                  <p>Ir al parque</p>
+                  <button class="delete">Eliminar</button>
+                </div>
+              </li>
+              <li>
+                <div class="nota">
+                  <p>Nota 2</p>
+                  <p>Entregar Guitarra</p>
+                  <button class="delete">Eliminar</button>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
