--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img src="images/Content.png" alt="welcome">
     </div>
   </header>
-  <div class="section">
+  <div id="root" class="section">
     <section class="lateral py-1 ">
       <a class="lateral__links" href="index.html">
         <svg>
@@ -27,57 +27,27 @@
         </svg>
         Notes
       </a>
-      <a href="trashpage.html" class="lateral__links">
+      <a href="#" class="lateral__links">
         <svg>
-          <use xlink:href="#trash" />
+          <use xlink:href="#trashSidebar" />
         </svg>
         Trash
       </a>
     </section>
 
-    <section class="main py-1 ">
+    <section class="main py-1">
       <!-- <h1>Bienvenido a Notas</h1> -->
-      <form>
-        <div class="input">
-          <label for="title"><input class="title-notes" id="title" type="text"
-              placeholder="The title for my note"></label>
-          <div class="input__container">
-            <label for="content"> <textarea type="text" placeholder="Write a note" class="input__content" id="content"
-                name="new-note"></textarea></label>
-          </div>
-          <div class="input__footer">
-            <div class="icons">
-              <svg>
-                <use xlink:href="#palette" />
-              </svg>
-            </div>
-            <!-- <a class="create-note" href="">Keep it!</a> -->
-            <button class="btn_add">Keep it!</button>
-          </div>
-        </div>
-
-
-      </form>
-      <div class="main__notes">
-        <div>
-          <div class="container-notas">
-            <ul class="container">
-
-            </ul>
-          </div>
-        </div>
-      </div>
     </section>
-    <script src="js/index.js"></script>
+  </div>
+  <script type="module" src="js/index.js"></script>
 </body>
 
 </html>
 <div hidden class="hidden">
-  <svg width="30" height="30" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <symbol id="palette" viewBox="-2 -5 24 22">
+  <svg viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <symbol id="palette" viewBox="-6 -5 24 22">
       <path
-        d="M7.18216 0.177016C3.68755 0.859058 0.871467 3.66809 0.182388 7.15213C-1.11842 13.7264 4.81258 18.6273 9.28104 17.9347C10.7295 17.7097 11.4397 16.0152 10.7752 14.7108C9.96309 13.1147 11.1233 11.2514 12.9163 11.2514H15.7183C16.9769 11.2514 17.9965 10.2108 18 8.95567C17.9824 3.41496 12.9409 -0.944486 7.18216 0.177016ZM3.37465 11.2514C2.75237 11.2514 2.24962 10.7487 2.24962 10.1264C2.24962 9.50412 2.75237 9.00138 3.37465 9.00138C3.99693 9.00138 4.49968 9.50412 4.49968 10.1264C4.49968 10.7487 3.99693 11.2514 3.37465 11.2514ZM4.49968 6.75134C3.8774 6.75134 3.37465 6.2486 3.37465 5.62632C3.37465 5.00405 3.8774 4.5013 4.49968 4.5013C5.12196 4.5013 5.6247 5.00405 5.6247 5.62632C5.6247 6.2486 5.12196 6.75134 4.49968 6.75134ZM8.99979 4.5013C8.37751 4.5013 7.87476 3.99856 7.87476 3.37629C7.87476 2.75401 8.37751 2.25127 8.99979 2.25127C9.62207 2.25127 10.1248 2.75401 10.1248 3.37629C10.1248 3.99856 9.62207 4.5013 8.99979 4.5013ZM13.4999 6.75134C12.8776 6.75134 12.3749 6.2486 12.3749 5.62632C12.3749 5.00405 12.8776 4.5013 13.4999 4.5013C14.1222 4.5013 14.6249 5.00405 14.6249 5.62632C14.6249 6.2486 14.1222 6.75134 13.4999 6.75134Z"
-        fill="#999B9E" />
+        d="M7.18216 0.177016C3.68755 0.859058 0.871467 3.66809 0.182388 7.15213C-1.11842 13.7264 4.81258 18.6273 9.28104 17.9347C10.7295 17.7097 11.4397 16.0152 10.7752 14.7108C9.96309 13.1147 11.1233 11.2514 12.9163 11.2514H15.7183C16.9769 11.2514 17.9965 10.2108 18 8.95567C17.9824 3.41496 12.9409 -0.944486 7.18216 0.177016ZM3.37465 11.2514C2.75237 11.2514 2.24962 10.7487 2.24962 10.1264C2.24962 9.50412 2.75237 9.00138 3.37465 9.00138C3.99693 9.00138 4.49968 9.50412 4.49968 10.1264C4.49968 10.7487 3.99693 11.2514 3.37465 11.2514ZM4.49968 6.75134C3.8774 6.75134 3.37465 6.2486 3.37465 5.62632C3.37465 5.00405 3.8774 4.5013 4.49968 4.5013C5.12196 4.5013 5.6247 5.00405 5.6247 5.62632C5.6247 6.2486 5.12196 6.75134 4.49968 6.75134ZM8.99979 4.5013C8.37751 4.5013 7.87476 3.99856 7.87476 3.37629C7.87476 2.75401 8.37751 2.25127 8.99979 2.25127C9.62207 2.25127 10.1248 2.75401 10.1248 3.37629C10.1248 3.99856 9.62207 4.5013 8.99979 4.5013ZM13.4999 6.75134C12.8776 6.75134 12.3749 6.2486 12.3749 5.62632C12.3749 5.00405 12.8776 4.5013 13.4999 4.5013C14.1222 4.5013 14.6249 5.00405 14.6249 5.62632C14.6249 6.2486 14.1222 6.75134 13.4999 6.75134Z" />
     </symbol>
   </svg>
   <svg width="137" height="29" viewBox="0 0 137 29" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -97,11 +67,16 @@
         fill="white" />
     </symbol>
   </svg>
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-    <symbol id="trash" viewBox="0 0 32 30">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <symbol id="trash" viewBox="-3 -1 24 22">
       <path
-        d="M17 6h5v2h-2v13a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V8H2V6h5V3a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v3zm1 2H6v12h12V8zm-9 3h2v6H9v-6zm4 0h2v6h-2v-6zM9 4v2h6V4H9z"
-        fill="white" />
+        d="M17 6h5v2h-2v13a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V8H2V6h5V3a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v3zm1 2H6v12h12V8zm-9 3h2v6H9v-6zm4 0h2v6h-2v-6zM9 4v2h6V4H9z" />
+    </symbol>
+  </svg>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <symbol id="trashSidebar" viewBox="0 0 32 30">
+      <path
+        d="M17 6h5v2h-2v13a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V8H2V6h5V3a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v3zm1 2H6v12h12V8zm-9 3h2v6H9v-6zm4 0h2v6h-2v-6zM9 4v2h6V4H9z" />
     </symbol>
   </svg>
 </div>
