Add sideBar component

--- a/index.html
+++ b/index.html
@@ -19,26 +19,7 @@
       <img src="images/Content.png" alt="welcome">
     </div>
   </header>
-  <div id="root" class="section">
-    <section class="lateral py-1 ">
-      <a class="lateral__links" href="index.html">
-        <svg>
-          <use xlink:href="#keys" />
-        </svg>
-        Notes
-      </a>
-      <a href="#" class="lateral__links">
-        <svg>
-          <use xlink:href="#trashSidebar" />
-        </svg>
-        Trash
-      </a>
-    </section>
-
-    <section class="main py-1">
-      <!-- <h1>Bienvenido a Notas</h1> -->
-    </section>
-  </div>
+  <div id="root" class="section"></div>
   <script type="module" src="js/index.js"></script>
 </body>
 
@@ -77,6 +58,13 @@
     <symbol id="trashSidebar" viewBox="0 0 32 30">
       <path
         d="M17 6h5v2h-2v13a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V8H2V6h5V3a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v3zm1 2H6v12h12V8zm-9 3h2v6H9v-6zm4 0h2v6h-2v-6zM9 4v2h6V4H9z" />
+    </symbol>
+  </svg>
+  <svg width="12" height="18" viewBox="0 0 12 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <symbol id="recover" viewBox="0 0 32 30">
+      <path
+        d="M11.0233 4.20712L7.36829 0.269512C7.03484 -0.0895737 6.46562 -0.090101 6.13171 0.269512L2.47634 4.20712C1.97691 4.74501 2.35765 5.625 3.09463 5.625H5.34375V15.1875H2.39147C2.33607 15.1875 2.28121 15.1984 2.23003 15.2196C2.17884 15.2408 2.13234 15.2719 2.09317 15.3111L0.12442 17.2798C-0.141361 17.5456 0.0468655 18 0.422721 18H7.3125C7.7785 18 8.15625 17.6222 8.15625 17.1563V5.625H10.4051C11.139 5.625 11.5248 4.74719 11.0233 4.20712Z"
+        fill="#999B9E" />
     </symbol>
   </svg>
 </div>
