Add style for responsive design

--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
   <!-- Happy coding -->
   <header>
     <div class="content-welcome">
-      <svg class="logo">
-        <use xlink:href="#logo" />
-      </svg>
-      <img src="images/Content.png" alt="welcome">
+      <img src="images/icons/{keepable}.svg">
+      <img class="content__welcome" src="images/Content.png" alt="welcome">
     </div>
   </header>
   <div id="root" class="section"></div>
